<resources>
    <string name="app_name">Rakshak</string>
    <string name="server">https://rakshak-zs.herokuapp.com/</string>
    <string name="error_missing_permissions">Cannot start without required permissions</string>
    <string name="toast_connected">Connected to %s</string>
    <string name="toast_disconnected">Disconnected from %s</string>

    <string name="general_call">100</string>
    <string name="fire_call">101</string>
    <string name="medical_call">102</string>
    <string name="disaster_call">108</string>
    <string name="status_unknown">Please wait</string>
    <string name="status_connected">Connected\nHold any of the volume keys to talk</string>
    <string name="status_searching">Looking for a device to connect to</string>
    <string name="dlat">805</string>
    <string name="dlong">274</string>
    <string name="general_message">General Emergency is requested in your Area</string>
    <string name="fire_message">Fire is reported in your Area</string>
    <string name="medical_message">Medical Help is requested in your Area</string>
    <string name="disaster_message">Police Help is requested in your Area</string>
    <string name="known_medical_conditions">Known medical conditions</string>
    <string name="help_us_serve_you_better">Help us serve you better.</string>
    <string name="aadhaar_identification">Aadhaar Identification</string>
    <string name="don_t_worry_your_data_will_remain_secured_with_us">Don\'t worry, your data will remain secured with us.</string>
    <string name="Continue">Continue</string>
    <string name="name">Name</string>
    <string name="safety_result_of_your_location_is">Safety result of your location is</string>
    <string name="Enter_your_organisation_network_ID_key">Enter your organisation network ID key</string>
    <string name="Trying_to_Login">Trying to login</string>
    <string name="Cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="General_Emergency">General Emergency</string>
    <string name="Medical">Medical</string>
    <string name="Fire">Fire</string>
    <string name="Disaster">Disaster</string>
</resources>
